# audio-experiments

./: .claudeignore  .gitignore  Cargo.toml  README.md
.claudecode/: README.md  instructions.md  prompt-playbook.md  settings.json
.sessions/: RESUME-HERE.md
.sessions/guides/: 2025-10-19-session-guide.md
.sessions/status/: 2025-10-18-project-status.md  2025-10-19-project-status.md
docs/: architecture.md  brainstorming-claude.md  github-project-setup-guide.md  mcp-setup-guide.md  naughty-and-tender-initial-issues.md  naughty-and-tender.md  project-management.md  project-statement.md
naughty-and-tender/: BUILD.md  Cargo.toml  PHASE2_RED_TESTS_SUMMARY.md  README.md
naughty-and-tender/src/: editor.rs  envelope.rs  lib.rs  oscillators.rs  params.rs  voice.rs
naughty-and-tender/tests/: integration_tests.rs
shared/: README.md
shared/core/: Cargo.toml
shared/core/src/: lib.rs
